--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -6,7 +6,7 @@
   scroll-behavior: smooth;
 }
 body{
-  background-color: #f8f5f5;
+  background-color: #FFFFFF;
 }
 @layer components {
  .header_line{
@@ -63,6 +63,7 @@ body{
   background-color: black;
   border-radius: 50%;
   padding: 26px;
+  margin-left: 4px;
 }
 .main_slider .swiper-button-prev:after,.swiper-rtl .swiper-button-next:after{
 font-size: 24px !important;
@@ -74,6 +75,8 @@ font-size: 24px !important;
   background-color: black;
   border-radius: 50%;
   padding: 26px;
+  margin-right: -30px;
+  
   }
 .main_slider .swiper-button-next:after, .swiper-rtl .swiper-button-prev:after{
 font-size: 24px !important;
@@ -86,14 +89,31 @@ font-size: 24px !important;
   background-color: rgb(202, 202, 202);
   border-radius: 50%;
   padding: 20px;
-  left: 2px !important;
+  left: 6px !important;
 }
 .swiper-button-prev:after,.swiper-rtl .swiper-button-next:after 
 {
 font-size: 10px !important;
   font-weight: bold;
   color: rgb(0, 0, 0) !important;
+  transition: .5;
 
+}
+ .swiper-button-prev, .swiper-rtl .swiper-button-next:hover
+, .swiper-button-next, .swiper-rtl .swiper-button-prev:hover
+{
+  animation: bounces 1s infinite;
+}
+
+@keyframes bounces {
+  0%, 100% {
+    transform: translateX(-10%);
+    animation-timing-function: cubic-bezier(0.8, 0, 1, 1);
+  }
+  50% {
+    transform: translateX(0);
+    animation-timing-function: cubic-bezier(0, 0, 0.2, 1);
+  }
 }
 .swiper-button-next, .swiper-rtl .swiper-button-prev
 {
@@ -185,11 +205,7 @@ display: none ;
     {
       width: 50px !important;
     }
-    .main_search:hover{
-      /* position: absolute;
-    top: 80px;
-    left: 5px; */
-    }
+  
     .main_search input{
       width: 0 !important;
      }
@@ -295,3 +311,117 @@ select:focus{
   background-color: red;
   border-radius: 10px;
 }
+.card , .card_coupons , .detials_coupons{
+  transition: .5s;
+}
+.card:hover , .card_coupons:hover{
+transform: translateY(0.75rem)
+}
+.discount{
+  transition: .5s;
+}
+.card:hover .discount{
+background-color: white;
+color: #f64a51;
+border:solid 1px #f64a51;
+font-weight: bold;
+}
+.located_card{
+  transition: 1s;
+}
+.located_card{
+  transform: scale(1);
+}
+.card:hover .located_card{
+  box-shadow: 0px 13px 13px 0px rgba(153, 51, 153, 0);
+  animation: located 1s infinite;
+
+}
+@keyframes located {
+  0%, 100% {
+    transform: translateY(-25%);
+    animation-timing-function: cubic-bezier(0.8, 0, 1, 1);
+  }
+  50% {
+    transform: translateY(0);
+    animation-timing-function: cubic-bezier(0, 0, 0.2, 1);
+    box-shadow: 0px 3px 4px 0px #9393;
+
+
+  }
+}
+
+ 
+.card_coupons:hover .coupons_located{
+  box-shadow: 0px 13px 13px 0px rgba(153, 51, 153, 0);
+  animation: coupons_located 1s infinite;
+
+}
+@keyframes coupons_located {
+  0%, 100% {
+    transform: translateY(-25%);
+    animation-timing-function: cubic-bezier(0.8, 0, 1, 1);
+  }
+  50% {
+    transform: translateY(0);
+    animation-timing-function: cubic-bezier(0, 0, 0.2, 1);
+    box-shadow: 0px 3px 4px 0px #9393;
+
+
+  }
+}
+.card_coupons:hover .detials_coupons {
+  background-color: transparent;
+  border: 1px solid rgb(175, 174, 174);
+}
+.search_icon{
+  transition: .5s;
+}
+.main_search:hover .search_icon{
+  animation: search 1s infinite;
+
+}
+
+@keyframes search {
+  0%, 100% {
+    transform: scale(1.3);
+    animation-timing-function: cubic-bezier(0.8, 0, 1, 1);
+  }
+  50% {
+    transform: scale(1);
+    animation-timing-function: cubic-bezier(0, 0, 0.2, 1);
+  }
+}
+
+.coupons_mainimg:hover 
+,.offer_Img:hover{
+  transform: scale(1.3);
+}
+input{
+  transition: .5s;
+}
+input:focus{
+ border-color: red !important; 
+  outline: none;
+}
+.title_cardIcon ,
+.icon_categries,
+.img_partents ,
+.title_partents{
+  transition: .5s;
+}
+
+.card_categries:hover .title_cardIcon{
+  transform: scale(1.2);
+
+}
+.card_categries:hover .icon_categries{
+  transform: scale(.8);
+}
+.partners_offer:hover .title_partents{
+  transform: translateY(-.8rem) scale(1.2);
+}
+.partners_offer:hover .img_partents{
+  transform: scale(.8);
+}
+
