--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -155,6 +155,7 @@ input[type="file"] {
   border: none;
   border-radius: 4px;
   cursor: pointer;
+  user-select: none;
 }
 .partners_offer{
   display: flex;
