edite login user in dashboard

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -443,3 +443,16 @@ input:focus{
 }
 
  
+.partents-connect_phone{
+  position: relative;
+}
+.partents-connect_phone::before{
+  position: absolute;
+  content: '';
+  width: 3px;
+  height: 56px;
+  border-radius: 10px;
+  background-color: #DDDDDD;
+  right: -30px;
+  top: 20%;
+}
